--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
         "start": "next start"
     },
     "dependencies": {
+        "@radix-ui/react-icons": "1.3.0",
+        "class-variance-authority": "0.7.0",
+        "clsx": "2.1.0",
         "geist": "1.2.1",
         "next": "14.1.0",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "tailwind-merge": "2.2.1",
+        "tailwindcss-animate": "1.0.7"
     },
     "devDependencies": {
         "@types/node": "20.11.16",
