--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@prisma/client": "5.9.1",
         "@radix-ui/react-dialog": "1.0.5",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-slot": "1.0.2",
@@ -28,6 +29,7 @@
         "postcss": "8.4.33",
         "prettier": "3.2.4",
         "prettier-plugin-tailwindcss": "0.5.11",
+        "prisma": "5.9.1",
         "tailwindcss": "3.4.1",
         "typescript": "5.3.3"
     }
