--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
         "start": "next start"
     },
     "dependencies": {
+        "@hookform/resolvers": "3.3.4",
         "@prisma/client": "5.9.1",
         "@radix-ui/react-dialog": "1.0.5",
         "@radix-ui/react-icons": "1.3.0",
+        "@radix-ui/react-label": "2.0.2",
         "@radix-ui/react-slot": "1.0.2",
+        "bcrypt": "5.1.1",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.0",
         "geist": "1.2.1",
+        "jose": "5.2.1",
         "next": "14.1.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "7.50.1",
         "tailwind-merge": "2.2.1",
-        "tailwindcss-animate": "1.0.7"
+        "tailwindcss-animate": "1.0.7",
+        "zod": "3.22.4"
     },
     "devDependencies": {
+        "@types/bcrypt": "5.0.2",
         "@types/node": "20.11.16",
         "@types/react": "18.2.51",
         "@types/react-dom": "18.2.18",
