--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "geist": "1.2.1",
         "jose": "5.2.1",
         "next": "14.1.0",
+        "next-themes": "0.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7.50.1",
